--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,9 +3,6 @@ on:
   push:
     branches:
       - main
-  schedule:
-    # Once a week on Tuesday at 14:15 UTC / 09:15 EST / 10:15 EDT
-    - cron: '15 14 * * 2'
 
 jobs:
   check:
@@ -15,19 +12,15 @@ jobs:
       - name: Checkout sources
         uses: actions/checkout@v3
 
-      - name: Install stable toolchain
-        uses: actions-rs/toolchain@v1
+      - name: Install toolchain
+        uses: dtolnay/rust-toolchain
         with:
-          profile: minimal
           toolchain: stable
-          override: true
 
-      - uses: Swatinem/rust-cache@v1
+      - uses: Swatinem/rust-cache@v2
 
       - name: Run cargo check
-        uses: actions-rs/cargo@v1
-        with:
-          command: check
+        run: cargo check --verbose
 
   test:
     name: Test Suite
@@ -40,20 +33,15 @@ jobs:
       - name: Checkout sources
         uses: actions/checkout@v3
 
-      - name: Install stable toolchain
-        uses: actions-rs/toolchain@v1
+      - name: Install toolchain
+        uses: dtolnay/rust-toolchain
         with:
-          profile: minimal
           toolchain: ${{ matrix.rust }}
-          override: true
 
-      - uses: Swatinem/rust-cache@v1
+      - uses: Swatinem/rust-cache@v2
 
       - name: Run cargo test
-        uses: actions-rs/cargo@v1
-        with:
-          command: test
-
+        run: cargo test --verbose
 
   lints:
     name: Lints
@@ -62,38 +50,30 @@ jobs:
       - name: Checkout sources
         uses: actions/checkout@v3
 
-      - name: Install stable toolchain
-        uses: actions-rs/toolchain@v1
+      - name: Install toolchain
+        uses: dtolnay/rust-toolchain
         with:
-          profile: minimal
           toolchain: stable
-          override: true
-          components: rustfmt, clippy
+          components: clippy
 
       - uses: Swatinem/rust-cache@v2
 
+      - name: Run cargo clippy on tests
+        run: cargo clippy --tests --verbose -- -Dclippy::all -Dclippy::pedantic
+
+  format:
+    name: Formatting
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout sources
+        uses: actions/checkout@v3
+
+      - uses: Swatinem/rust-cache@v2
+        
+      - name: Install toolchain (minimal+clippy, stable)
+        uses: dtolnay/rust-toolchain@stable
+        with:
+          components: rustfmt
+
       - name: Run cargo fmt
-        uses: actions-rs/cargo@v1
-        with:
-          command: fmt
-          args: --all -- --check
-
-      - name: Run cargo clippy against source
-        uses: actions-rs/cargo@v1
-        with:
-          command: clippy
-          args: -- -D warnings
-
-      - name: Run cargo clippy against tests
-        uses: actions-rs/cargo@v1
-        with:
-          command: clippy
-          args: --tests -- -D warnings
-
-      - name: Run rustdoc lints
-        uses: actions-rs/cargo@v1
-        env:
-          RUSTDOCFLAGS: "-D missing_docs -D rustdoc::broken-intra-doc-links"
-        with:
-          command: doc
-          args: --workspace --all-features --no-deps
+        run: cargo fmt --verbose -- --check
